--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+*{
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
+}
+
+.contenedor{
+  width: 100%;
+  max-width: 2000px;
+}
+
 nav{
     background-color: #ffe259;
     
@@ -30,11 +39,14 @@ nav{
 
 .banner {
     width: 100%;
-    height: 500px;
+    height: 380px;
+    object-fit: cover;
+    object-position: bottom;
     margin: auto;
-    border: 4px solid grey;
+    border: 4px solid black;
     background-image: url(/Proyecto/imagen/banner.png);
     background-size: 100% 100%;
+    box-sizing: border-box;
 }
 
 .boton{
@@ -46,26 +58,30 @@ text-decoration: none; /*decoración texto*/
 font-family: 'Times New Roman', Times, serif, sans-serif; /*tipografía texto*/
 }
 
+.perfil{
+    margin-left: 1%;
+}
+.perfil h6{
+    margin-left: 30px;
+}
 .perfil img{
     width: 150px;
     height: 150px;
     margin-left: 30px;
     margin-top: -80px;
     border-radius: 75px;
+    object-fit: cover;
+    object-position: bottom;
+    border: 2px solid rgb(255, 244, 86);
 }
 
-.perfil{
-  margin-left: 10px;
-}
-.perfil h6{
-    margin-left: 30px;
-}
+
 .personal{
     text-align: center;
     margin-top: -70px;
 }
 .personal h6{
-    text-align: right;
+    text-align: center;
 
 }
 .experiencia h5{
@@ -82,6 +98,147 @@ font-family: 'Times New Roman', Times, serif, sans-serif; /*tipografía texto*/
     border-radius: 10px;
     width: 40px;
     height: 40px;
+}
+
+* ul li{
+   font-style: italic;
+   
+}
+
+
+/*celular pequeño*/
+@media only screen and(max-width:360px) {
+   .redes a img{
+    
+   }
+    .perfil{
+        margin: auto;
+        height: 50%;
+        width: 100%;
+    }
+    .personal{
+        margin: auto;
+        width:100%;
+
+    }
+    .banner{
+        width: 50%;
+        height: 50%;
+    }
+    .estudios{
+        width: 100%;
+        margin: auto;
+    }
+    .experiencia{
+        width: 100%;
+        margin: auto;
+    }
+}
+
+
+
+/*celular mediano*/
+
+@media screen and (max-width:767px){
+    .redes{
+        width: 100%;
+        height: auto;
+        
+    }
+
+    .perfil{
+        margin: auto;
+        height: 50%;
+        width: 100%;
+    }
+    .personal{
+        margin: auto;
+        width:100%;
+
+    }
+    .banner{
+        width: 100%;
+        height: 20em;
+    }
+    .estudios{
+        width: 100%;
+        margin: auto;
+    }
+    .experiencia{
+        width: 100%;
+        margin: auto;
+    }
+}
+
+/*tablet */
+@media only screen and (max-width: 1023px){
+   
+    .perfil{
+        margin: auto;
+        height: 50%;
+        width: 100%;
+    }
+    .personal{
+        margin: auto;
+        width:100%;
+
+    }
+    .banner{
+        width: 100%;
+        height: 20em;
+    }
+    .estudios{
+        width: 100%;
+        margin: auto;
+    }
+    .experiencia{
+        width: 100%;
+        margin: auto;
+    }
+
+}
+
+
+
+/*PC grande*/
+@media screen and (max-width:1920px){
+    .perfil{
+        height: 50%;
+        width: 100%;
+    }
+    .personal{
+        margin: auto;
+        width:100%;
+
+    }
+    .banner{
+        width: 100%;
+        height: 20em;
+    }
+    .estudios{
+        width: 100%;
+        margin: auto;
+    }
+    .experiencia{
+        width: 100%;
+        margin: auto;
+    }
+    
+
+}
+
+
+/*PC mediana*/
+@media screen and (max-width:1440px){
+    
+
+}
+
+
+/*Laptop*/
+@media screen and (min-width:1024px){
+    
+
 }
 
 
